# engmetrics-ai

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  documentation.md
.github/workflows/: ci.yml  security.yml
data/: deployments_kan4.json
docs/: architecture.md  community.md  metrics.md
site-ai-html/: demo-dashboard.html  demo.html  index.html
src/ai_engineering_metrics/: cli.py  config.py  output.py  service.py  setup_wizard.py
src/ai_engineering_metrics/domain/: metrics.py
src/ai_engineering_metrics/integrations/: deployment_client.py
src/ai_engineering_metrics/mock/: mock_data.py
tests/: test_output.py  test_setup_wizard.py
