[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-engineering-metrics"
version = "0.1.0"
description = "CLI to measure the impact of AI usage on engineering delivery (JIRA + GitHub -> HTML dashboard)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dennis Rojas Pereira" }]
keywords = ["ai", "metrics", "engineering", "jira", "github", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "plotly>=5.22",
]

[project.urls]
Homepage = "https://engmetrics.ai"
Documentation = "https://engmetrics.ai"
Repository = "https://github.com/engmetrics-ai/engmetrics-ai"
Issues = "https://github.com/engmetrics-ai/engmetrics-ai/issues"
Changelog = "https://github.com/engmetrics-ai/engmetrics-ai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pandas = ["pandas>=2.2"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
ai-engineering-metrics = "ai_engineering_metrics.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_engineering_metrics"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer uses function-call defaults (typer.Option(...)) by design.
"src/ai_engineering_metrics/cli.py" = ["B008"]

[tool.coverage.run]
source = ["ai_engineering_metrics"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Pragmatic, not strict: keeps the gate green while still catching real type bugs.
check_untyped_defs = true

[tool.bandit]
# Scanned via `bandit -r src`. We deliberately use subprocess with a list of
# args (never shell=True) and resolve the executable via shutil.which, so the
# generic subprocess warnings are not relevant here.
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = ["B404", "B603"]
